--- a/apps/vanillajs/package.json
+++ b/apps/vanillajs/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
+    "@tailwindcss/postcss": "^4.0.6",
     "postcss": "^8.5.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.6",
     "typescript": "5.7.3",
     "vite": "^6.1.0"
   },
