--- a/apps/svelteweb/package.json
+++ b/apps/svelteweb/package.json
@@ -13,26 +13,26 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/adapter-cloudflare": "^5.0.2",
-		"@sveltejs/kit": "^2.17.1",
+		"@sveltejs/adapter-cloudflare": "^5.0.3",
+		"@sveltejs/kit": "^2.17.2",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@typescript-eslint/eslint-plugin": "^7.15.0",
 		"@typescript-eslint/parser": "^7.15.0",
-		"bits-ui": "^1.0.0-next.86",
+		"bits-ui": "^1.2.0",
 		"clsx": "^2.1.1",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
-		"lucide-svelte": "^0.474.0",
+		"lucide-svelte": "^0.475.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.19.8",
+		"svelte": "^5.20.1",
 		"svelte-check": "^4.1.4",
 		"tailwind-merge": "^3.0.1",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.8.1",
-		"typescript": "5.6.3",
+		"typescript": "5.7.3",
 		"vite": "^6.1.0"
 	},
 	"dependencies": {
