--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,7 +25,6 @@
     "install": "^0.13.0",
     "next": "^15.1.7",
     "postcss-focus-visible": "^10.0.1",
-    "postcss-import": "^16.1.0",
     "prism-react-renderer": "^2.4.1",
     "prism-svelte": "^0.5.0",
     "react": "^18.3.1",
@@ -37,18 +36,18 @@
     "@babel/core": "^7.26.9",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.0.6",
     "@tailwindcss/typography": "^0.5.16",
     "@types/d3-drag": "^3.0.7",
     "@types/d3-selection": "^3.0.11",
     "@types/node": "^22.13.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "8.56.0",
     "eslint-config-custom": "0.0.0",
     "postcss": "^8.5.2",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.6",
     "ts-node": "^10.9.2",
     "tsconfig": "0.0.0",
     "typescript": "5.7.3"
