--- a/apps/svelteweb/package.json
+++ b/apps/svelteweb/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-cloudflare": "^5.0.3",
 		"@sveltejs/kit": "^2.17.2",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@tailwindcss/vite": "^4.0.6",
 		"@typescript-eslint/eslint-plugin": "^7.15.0",
 		"@typescript-eslint/parser": "^7.15.0",
 		"bits-ui": "^1.2.0",
@@ -37,11 +38,12 @@
 	},
 	"dependencies": {
 		"@pdfslick/core": "^2.0.0",
+		"@tailwindcss/postcss": "^4.0.6",
 		"d3-drag": "^3.0.0",
 		"d3-selection": "^3.0.0",
 		"iconify-icon": "^2.3.0",
 		"svelte-portal": "^2.2.1",
-		"tailwindcss": "^3.4.17"
+		"tailwindcss": "^4.0.6"
 	},
 	"type": "module"
 }
