--- a/apps/solidweb/package.json
+++ b/apps/solidweb/package.json
@@ -14,11 +14,12 @@
     "@kobalte/tailwindcss": "^0.9.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.0.6",
+    "@tailwindcss/vite": "^4.0.6",
     "@types/d3-drag": "^3.0.7",
     "@types/d3-selection": "^3.0.11",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.6",
     "typescript": "5.7.3",
     "vite": "^6.1.0",
     "vite-plugin-solid": "^2.11.1"
