--- a/apps/svelteweb/package.json
+++ b/apps/svelteweb/package.json
@@ -34,7 +34,8 @@
 		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.8.1",
 		"typescript": "5.7.3",
-		"vite": "^6.1.0"
+		"vite": "^6.1.0",
+		"wrangler": "^3.110.0"
 	},
 	"dependencies": {
 		"@pdfslick/core": "^2.0.0",
