--- a/apps/vanillajs/package.json
+++ b/apps/vanillajs/package.json
@@ -9,14 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "5.6.3",
-    "vite": "^5.4.13"
+    "@tailwindcss/postcss": "^4.0.6",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^4.0.6",
+    "typescript": "5.7.3",
+    "vite": "^6.1.0"
   },
   "dependencies": {
-    "@pdfslick/core": "^2.0.0",
-    "zustand": "^5.0.3"
+    "@pdfslick/core": "^2.0.0"
   }
 }
