--- a/config/tsconfig/package.json
+++ b/config/tsconfig/package.json
@@ -9,9 +9,6 @@
     "core.json"
   ],
   "dependencies": {
-    "tailwindcss": "^3.4.17",
-    "typescript": "5.6.3",
-    "vite": "^5.4.13",
-    "zustand": "^5.0.3"
+    "typescript": "5.7.3"
   }
 }
