--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -51,7 +51,7 @@
     "eslint-config-custom": "0.0.0",
     "react": "^18.3.1",
     "tsconfig": "0.0.0",
-    "typescript": "5.6.3",
+    "typescript": "5.7.3",
     "wait-on": "^8.0.2"
   },
   "peerDependencies": {
@@ -61,10 +61,7 @@
   "dependencies": {
     "@pdfslick/core": "^2.1.3",
     "react-use": "^17.6.0",
-    "tailwindcss": "^3.4.17",
-    "use-sync-external-store": "^1.4.0",
-    "vite": "^5.4.13",
-    "zustand": "^5.0.3"
+    "use-sync-external-store": "^1.4.0"
   },
   "publishConfig": {
     "provenance": true
