--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -47,24 +47,24 @@
     "dev": "concurrently \"rollup -c -w\" \"wait-on ./dist && copyfiles -u 3 '../core/dist/pdf_viewer.css' ./dist\""
   },
   "devDependencies": {
-    "@babel/core": "^7.26.7",
-    "@babel/preset-env": "^7.26.7",
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.26.0",
     "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-commonjs": "^28.0.2",
     "@types/babel__core": "^7.20.5",
     "babel-preset-solid": "^1.9.3",
     "concurrently": "^9.1.2",
     "copyfiles": "^2.4.1",
     "eslint": "^8.56.0",
     "eslint-config-custom": "0.0.0",
-    "merge-anything": "^6.0.2",
+    "merge-anything": "^6.0.3",
     "rollup-plugin-cleaner": "^1.0.0",
-    "rollup-preset-solid": "^2.0.1",
+    "rollup-preset-solid": "^3.0.0",
     "solid-js": "^1.9.4",
     "solid-refresh": "^0.7.5",
     "tsconfig": "0.0.0",
-    "typescript": "5.6.3",
+    "typescript": "5.7.3",
     "wait-on": "^8.0.2"
   },
   "peerDependencies": {
@@ -72,10 +72,7 @@
   },
   "dependencies": {
     "@pdfslick/core": "^2.1.3",
-    "@solid-primitives/resize-observer": "^2.1.0",
-    "tailwindcss": "^3.4.17",
-    "vite": "^5.4.13",
-    "zustand": "^5.0.3"
+    "@solid-primitives/resize-observer": "^2.1.0"
   },
   "publishConfig": {
     "provenance": true
