--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfslick/core",
-  "version": "2.3.0",
+  "version": "3.0.0",
   "source": "./index.ts",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -42,11 +42,13 @@
     "dev": "concurrently \"rollup --config node:@pdfslick/rollup-config --watch\" \"npm run css-watch\"",
     "devdev": "rollup --config node:@pdfslick/rollup-config && npm run css",
     "build": "rollup --config node:@pdfslick/rollup-config --environment NODE_ENV:production && npm run css",
-    "css": "node combine-css.js",
-    "css-watch": "npm run css -- --watch"
+    "css": "cat ../../node_modules/pdfjs-dist/web/pdf_viewer.css ./styles/pdf_viewer.css | postcss -o dist/pdf_viewer.css",
+    "css-watch": "npm run css",
+    "css-js": "node combine-css.js",
+    "css-watch-js": "npm run css -- --watch"
   },
   "dependencies": {
-    "pdfjs-dist": "^4.10.38",
+    "pdfjs-dist": "^5.2.133",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
