--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,8 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@markdoc/markdoc": "^0.5.1",
-    "@markdoc/next.js": "^0.3.7",
+    "@markdoc/markdoc": "^0.5.4",
+    "@markdoc/next.js": "^0.5.0",
     "@pdfslick/core": "^3.0.0",
     "@pdfslick/react": "^3.0.0",
     "@radix-ui/react-popover": "^1.1.6",
@@ -23,7 +23,7 @@
     "d3-zoom": "^3.0.0",
     "focus-visible": "^5.2.1",
     "install": "^0.13.0",
-    "next": "^15.2.0",
+    "next": "^15.5.6",
     "postcss-focus-visible": "^10.0.1",
     "prism-react-renderer": "^2.4.1",
     "prism-svelte": "^0.5.0",
