--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -44,12 +44,14 @@
     "build": "rollup --config node:@pdfslick/rollup-config --environment NODE_ENV:production && copyfiles -u 3 \"../core/dist/pdf_viewer.css\" ./dist"
   },
   "devDependencies": {
-    "@types/react": "^19.2.5",
     "concurrently": "^9.2.1",
     "copyfiles": "^2.4.1",
     "eslint": "^9.39.1",
     "eslint-config-custom": "0.0.0",
-    "react": "^19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "tsconfig": "0.0.0",
     "typescript": "5.9.3",
     "wait-on": "^9.0.3"
