--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,11 +43,12 @@
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "eslint": "9.21.0",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
     "eslint-config-custom": "0.0.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.6",
     "sharp": "^0.33.5",
-    "tailwindcss": "^4.0.9",
+    "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
     "tsconfig": "0.0.0",
     "typescript": "5.7.3"
